<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicle_id"
            style="@style/DetailLabelTheme"
            android:text="@string/vehicle_id"/>

        <TextView
            android:id="@+id/vehicle_id_value"
            style="@style/TextTheme"
            android:layout_toEndOf="@+id/vehicle_id"
            tools:text="1234"/>

        <TextView
            android:id="@+id/vrn"
            style="@style/DetailLabelTheme"
            android:layout_below="@+id/vehicle_id"
            android:text="@string/vrn"/>

        <TextView
            android:id="@+id/vrn_value"
            style="@style/TextTheme"
            android:layout_below="@+id/vehicle_id_value"
            android:layout_toEndOf="@+id/vrn"
            tools:text="VRN"/>

        <TextView
            android:id="@+id/county"
            style="@style/DetailLabelTheme"
            android:layout_below="@+id/vrn"
            android:text="@string/country"/>

        <TextView
            android:id="@+id/country_value"
            style="@style/TextTheme"
            android:layout_below="@+id/vrn_value"
            android:layout_toEndOf="@+id/county"
            tools:text="Country"/>

        <TextView
            android:id="@+id/color"
            style="@style/DetailLabelTheme"
            android:layout_below="@+id/county"
            android:text="@string/color"/>

        <TextView
            android:id="@+id/color_value"
            style="@style/TextTheme"
            android:layout_below="@+id/country_value"
            android:layout_toEndOf="@+id/type"
            tools:text="Color"/>

        <TextView
            android:id="@+id/type"
            style="@style/DetailLabelTheme"
            android:layout_below="@+id/color"
            android:text="@string/type"/>

        <TextView
            android:id="@+id/type_value"
            style="@style/TextTheme"
            android:layout_below="@+id/color_value"
            android:layout_toEndOf="@+id/type"
            tools:text="Type"/>

        <TextView
            android:id="@+id/default_id"
            style="@style/DetailLabelTheme"
            android:layout_below="@+id/type"
            android:text="@string/is_default"/>

        <TextView
            android:id="@+id/default_value"
            style="@style/TextTheme"
            android:layout_below="@+id/type_value"
            android:layout_toEndOf="@+id/default_id"
            tools:text="True"/>


    </RelativeLayout>

</ScrollView>